--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-device-info": "^10.7.0",
     "react-native-gesture-handler": "2.9.0",
     "react-native-linear-gradient": "3.0.0-alpha.1",
+    "react-native-macos": "^0.73.0-0",
     "react-native-permissions": "^3.8.1",
     "react-native-print": "0.8.0",
     "react-native-radio-buttons-group": "^3.1.0",
