--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,6 @@
     "typescriptreact"
   ],
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": "explicit"
   }
 }
